@@ -3,4 +3,4 @@ Section: debian-installer
 Priority: optional
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Joey Hess <joeyh@debian.org>, Herbert Xu <herbert@debian.org>
-Build-Depends: debhelper (>= 4)
+Build-Depends: debhelper (>= 4.2)
